# SimpleSparseMerkle

./: Cargo.toml  README.md  comparing_impls_optimizations_performed.md  out
.github/workflows/: rust.yml
proptest-regressions/tests/: sparse_merkle_tree_tests.txt
src/: account.rs  combined.rs  error.rs  kv_store.rs  lib.rs  proof.rs  sparse_merkle_tree.rs  transaction.rs  tree_hasher.rs  tree_sparse_merkle.rs
src/tests/: mod.rs  proptest_tests.rs  sparse_merkle_tree_tests.rs
