[package]
name = "SimpleSparseMerkle"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2"
digest = "0.10"
sha2 = "0.10" # Example hash function

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand="*"
sha3="*"
ethnum="*"
thiserror ="*"
env_logger = "0.9"
log = "0.4"
tracing="*"
tracing-subscriber="*"
contracts = "0.6"
proptest = "1.0"
dhat = "0.3.3"

[dev-dependencies]
rand = "0.8" # For testing random values
criterion = "0.3"


[features]
debug-logs = []
